* stylesheets() is now extensible * INDEX is false if ADMIN is true * application/xhtml+xml is no longer the default content-type. Only in the Admin area. * truncate() is now *much* smarter about handling entities.

--- a/admin/style.css
+++ b/admin/style.css
@@ -915,4 +915,7 @@ br#after_options {
 .js_enabled {
 	display: none;
 }
+img.smiley {
+	margin: 0 0 -.3em;
+}
 /* @end */
